trying to fix the scrollbars

--- a/css/masterPage.css
+++ b/css/masterPage.css
@@ -244,6 +244,6 @@ form.stdForm {
     font-size: 0px;
 }
 
-iframe::-webkit-scrollbar{
+::-webkit-scrollbar{
   display: none;
 }
